# fuzzing-101-solutions

./: .gitignore  Cargo.toml  Makefile.toml  README.md
exercise-1/: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  time-comparison.sh
exercise-1.5/: CMakeLists.txt  Cargo.toml  Makefile.toml  README.md  harness.cc
exercise-1.5/src/: lib.rs
exercise-1.5/xpdf/: CMakeLists.txt  aconf.h  cmake-config.txt  config.status
exercise-1.5/xpdf/fofi/: CMakeLists.txt  Makefile
exercise-1.5/xpdf/goo/: Makefile
exercise-1.5/xpdf/splash/: Makefile
exercise-1.5/xpdf/xpdf/: Makefile  pdfinfo.cc  pdftotext.cc
exercise-1/src/: lib.rs  main.rs
exercise-1/xpdf/: Makefile  aconf.h  config.status
exercise-1/xpdf/cmake/: mimick_find.cmake
exercise-1/xpdf/fofi/: Makefile
exercise-1/xpdf/goo/: Makefile  gmem.cc
exercise-1/xpdf/splash/: Makefile
exercise-1/xpdf/xpdf/: CMakeLists.txt  Makefile  PDFDoc.cc
exercise-2/: Cargo.toml  Makefile.toml  README.md  harness.c
exercise-2/libexif/doc/: Doxyfile  Doxyfile-internals
exercise-2/libexif/po/: de.po  es.po  fr.po  pl.po  ru.po  vi.po
exercise-2/src/: lib.rs
exercise-3/: Cargo.toml  Makefile.toml  README.md  afl-tmin  afl-tmin-threaded.py  build.rs  create-bootp.py  libafl-executors-forkserver.patch  libafl-sugar-forkserver.patch  libafl_sugar-forkserver.patch  optimin  pyproject.toml
exercise-3/corpus/: bootp-testcase.pcap
exercise-3/src/: main.rs  parser.rs
exercise-4/: Cargo.toml  Makefile.toml  README.md  build.rs
exercise-4/src/: main.rs
exercise-4/tiff/: Makefile  config.status  libtiff-4.pc  libtool
exercise-4/tiff/contrib/: Makefile
exercise-4/tiff/contrib/addtiffo/: Makefile
exercise-4/tiff/contrib/addtiffo/.deps/: addtiffo.Po  tif_overview.Po  tif_ovrcache.Po
exercise-4/tiff/contrib/dbs/: Makefile
exercise-4/tiff/contrib/dbs/.deps/: tiff-bi.Po  tiff-grayscale.Po  tiff-palette.Po  tiff-rgb.Po
exercise-4/tiff/contrib/dbs/xtiff/: Makefile
exercise-4/tiff/contrib/iptcutil/: Makefile
exercise-4/tiff/contrib/iptcutil/.deps/: iptcutil.Po
exercise-4/tiff/contrib/mfs/: Makefile
exercise-4/tiff/contrib/pds/: Makefile
exercise-4/tiff/contrib/ras/: Makefile
exercise-4/tiff/contrib/stream/: Makefile
exercise-4/tiff/contrib/tags/: Makefile
exercise-4/tiff/contrib/win_dib/: Makefile
exercise-4/tiff/html/: Makefile
exercise-4/tiff/html/images/: Makefile
exercise-4/tiff/html/man/: Makefile
exercise-4/tiff/libtiff/: Makefile  tif_config.h
exercise-4/tiff/libtiff/.deps/: mkg3states.Po  tif_aux.Plo  tif_close.Plo  tif_codec.Plo  tif_color.Plo  tif_compress.Plo  tif_dir.Plo  tif_dirinfo.Plo  tif_dirread.Plo  tif_dirwrite.Plo  tif_dumpmode.Plo  tif_error.Plo  tif_extension.Plo  tif_fax3.Plo  tif_fax3sm.Plo  tif_flush.Plo  tif_getimage.Plo  tif_jbig.Plo  tif_jpeg.Plo  tif_jpeg_12.Plo  tif_luv.Plo  tif_lzma.Plo  tif_lzw.Plo  tif_next.Plo  tif_ojpeg.Plo  tif_open.Plo  tif_packbits.Plo  tif_pixarlog.Plo  tif_predict.Plo  tif_print.Plo  tif_read.Plo  tif_strip.Plo  tif_swab.Plo  tif_thunder.Plo  tif_tile.Plo  tif_unix.Plo  tif_version.Plo  tif_warning.Plo  tif_write.Plo  tif_zip.Plo
exercise-4/tiff/man/: Makefile
exercise-4/tiff/port/: Makefile
exercise-4/tiff/port/.deps/: dummy.Plo
exercise-4/tiff/test/: Makefile
exercise-4/tiff/tools/: Makefile
exercise-4/tiff/tools/.deps/: bmp2tiff.Po  fax2ps.Po  fax2tiff.Po  gif2tiff.Po  pal2rgb.Po  ppm2tiff.Po  ras2tiff.Po  raw2tiff.Po  rgb2ycbcr.Po  thumbnail.Po  tiff2bw.Po  tiff2pdf.Po  tiff2ps.Po  tiff2rgba.Po  tiffcmp.Po  tiffcp.Po  tiffcrop.Po  tiffdither.Po  tiffdump.Po  tiffinfo.Po  tiffmedian.Po  tiffset.Po  tiffsplit.Po
exercise-5/: README.md  fuzzer.py  harness.c  libafl_sugar_qemu.patch  pyproject.toml  tasks.py
exercise-5/libxml2/: Makefile  config.h  config.status  libtool  libxml-2.0-uninstalled.pc  libxml-2.0.pc  libxml2-config.cmake  libxml2.spec  xml2-config
exercise-5/libxml2/.deps/: HTMLparser.Plo  HTMLtree.Plo  SAX.Plo  SAX2.Plo  buf.Plo  c14n.Plo  catalog.Plo  chvalid.Plo  debugXML.Plo  dict.Plo  encoding.Plo  entities.Plo  error.Plo  globals.Plo  hash.Plo  legacy.Plo  list.Plo  nanoftp.Plo  nanohttp.Plo  parser.Plo  parserInternals.Plo  pattern.Plo  relaxng.Plo  runsuite.Po  runtest.Po  runxmlconf.Po  schematron.Plo  testAutomata.Po  testC14N.Po  testHTML.Po  testModule.Po  testReader.Po  testRegexp.Po  testRelax.Po  testSAX.Po  testSchemas.Po  testThreads.Po  testURI.Po  testXPath.Po  testapi.Po  (+27 more)
exercise-5/libxml2/doc/: Makefile
exercise-5/libxml2/doc/devhelp/: Makefile
exercise-5/libxml2/doc/examples/: Makefile
exercise-5/libxml2/doc/examples/.deps/: io1.Po  io2.Po  parse1.Po  parse2.Po  parse3.Po  parse4.Po  reader1.Po  reader2.Po  reader3.Po  reader4.Po  testWriter.Po  tree1.Po  tree2.Po  xpath1.Po  xpath2.Po
exercise-5/libxml2/example/: Makefile
exercise-5/libxml2/example/.deps/: gjobread.Po
exercise-5/libxml2/include/: Makefile
exercise-5/libxml2/include/libxml/: Makefile  xmlversion.h
exercise-5/libxml2/python/: Makefile  setup.py
exercise-5/libxml2/python/tests/: Makefile
exercise-5/libxml2/xstc/: Makefile
fuzzer-options/: Cargo.toml
fuzzer-options/src/: lib.rs
jammy-rootfs/debootstrap/: base  debian-common  debootstrap  debpaths  deburis  functions  required  suite-script
jammy-rootfs/etc/: issue  issue.net  resolv.conf
jammy-rootfs/etc/apt/: sources.list
jammy-rootfs/etc/sysctl.d/: 10-zeropage.conf
jammy-rootfs/usr/lib/: os-release
jammy-rootfs/usr/lib/aarch64-linux-gnu/: ld-linux-aarch64.so.1  libBrokenLocale.so.1  libacl.so.1.1.2301  libanl.so.1  libattr.so.1.1.2501  libaudit.so.1.0.0  libblkid.so.1.1.0  libbz2.so.1.0.4  libc_malloc_debug.so.0  libcap.so.2.44  (+61 more)
jammy-rootfs/usr/sbin/: agetty  badblocks  blkdiscard  blkid  blkzone  blockdev  chcpu  chgpasswd  chmem  chpasswd  chroot  cppw  ctrlaltdel  debugfs  dumpe2fs  e2freefrag  e2fsck  e2image  e2undo  e4crypt  e4defrag  faillock  filefrag  findfs  fsck  fsck.cramfs  fsck.minix  fsfreeze  fstab-decode  fstrim  groupadd  groupdel  groupmems  groupmod  grpck  grpconv  grpunconv  hwclock  iconvconfig  isosize  (+45 more)
(+258 files in other folders)
