[package]
name = "exercise-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { path = "../LibAFL/libafl" }
libafl_sugar = { path = "../LibAFL/libafl_sugar" }
libafl_targets = { path = "../LibAFL/libafl_targets" }
clap = { version = "3.0.0-beta.5", features = ["derive"] }