[tool.poetry]
name = "exercise-3"
version = "0.1.0"
description = ""
authors = ["epi <epibar052@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scapy = "^2.4.5"
ipython = "^7.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
