[tool.poetry]
name = "exercise-5"
version = "0.1.0"
description = ""
authors = ["epi <epibar052@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.6.0"
maturin = "^0.12.6"
rich = "^11.0.0"
lief = "^0.11.5"
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
