[package]
name = "fuzzer-options"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
libafl = { path = "../LibAFL/libafl/" }
libafl_qemu = { path = "../LibAFL/libafl_qemu/", optional = true }
